--- a/templates/show.html
+++ b/templates/show.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <img src="{{ user_image }}" alt="Italian Trulli" width="500" height="400">
-    
+    <div>
+        <button>
+            <a href="{{url_for('upload_file')}}">
+                Go to upload page
+            </a>
+        </button>
+    </div>
+
 </body>
+
 </html>
